# mohave

./: .travis.yml  LICENSE  Setup.hs  mohave.cabal
.github/workflows/: ci.yml
cbits/HDF/: wrapper.c
src/Data/Format/HDF/: LowLevel.hs  SD.hs
src/Data/Format/HDF/LowLevel/: Definitions.hs  HE.hs  SD.hs
src/Data/Format/HDF/LowLevel/C/: Definitions.hsc
src/Data/Format/HDF/LowLevel/Definitions/: Internal.hs
src/Data/Format/NetCDF/: LowLevel.hs
src/Data/Format/NetCDF/LowLevel/: Attribute.hs  ChunkCache.hs  Definitions.hs  Dimension.hs  Error.hs  File.hs  Group.hs  String.hs  Util.hs  VLen.hs  Variable.hs
src/Data/Format/NetCDF/LowLevel/C/: Definitions.hsc
src/Data/Format/NetCDF/LowLevel/User/: Type.hs
src/Data/Format/NetCDF/LowLevel/Variable/: Internal.hs
src/Foreign/C/Lib/: FFI.hsc
src/Internal/: Definitions.hs
src/Internal/Numerals/: Ternary.hs
test/: Main.hs
test-data/nc/: compound.c  empty.cdl  gen-all-files.sh  test1.cdl  test2.cdl  test3.cdl  test4.cdl3  test5.cdl
test-data/sd/: SDSlongname.hdf  Unlim_dim.hdf  Unlim_inloop.hdf  attdatainfo.hdf  b150.hdf  bug376.hdf  chknbit.hdf  chktst.hdf  comptst1.hdf  comptst2.hdf  comptst3.hdf  comptst4.hdf  comptst5.hdf  comptst6.hdf  comptst7.hdf  datainfo_chk.hdf  datainfo_chkcmp.hdf  datainfo_cmp.hdf  datainfo_extend.hdf  datainfo_nodata.hdf  datainfo_simple.hdf  datasizes.hdf  dim.hdf  emptySDSs.hdf  exttst.hdf  hdffile.hdf  idtypes.hdf  multidimmixed.hdf  nbit.hdf  onedimmultivars.hdf  scaletst.hdf  sds1_dim1_samename.hdf  sds2_dim1_samename.hdf  sds_compressed.hdf  tattributes.hdf  tdfanndg.hdf  tdfansdg.hdf  tdfsdatts.hdf  test1.hdf  test2.hdf  (+3 more)
test/Data/Format/HDF/: SDSpec.hs
test/Data/Format/HDF/LowLevel/: HESpec.hs  SDSpec.hs
test/Data/Format/NetCDF/LowLevel/: AttributeSpec.hs  ChunkCacheSpec.hs  DimensionSpec.hs  ErrorSpec.hs  FileSpec.hs  GroupSpec.hs  StringSpec.hs  UserTypeSpec.hs  VLenSpec.hs  VariableSpec.hs
test/Data/Format/NetCDF/User/: Types.hs
test/Testing/: Common.hs
