cabal-version:       2.0
name:                mohave
version:             1.0.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Yurii Batrak
maintainer:
-- copyright:
category:            Science
build-type:          Custom
-- extra-source-files:  ChangeLog.md

custom-setup
  setup-depends:       base
                     , Cabal

library
  exposed-modules:     Data.Format.HDF.LowLevel
                     , Data.Format.HDF.LowLevel.Definitions
                     , Data.Format.HDF.LowLevel.HE
                     , Data.Format.HDF.LowLevel.SD
                     , Data.Format.HDF.SD
                     , Data.Format.NetCDF.LowLevel
                     , Data.Format.NetCDF.LowLevel.Attribute
                     , Data.Format.NetCDF.LowLevel.ChunkCache
                     , Data.Format.NetCDF.LowLevel.Dimension
                     , Data.Format.NetCDF.LowLevel.Error
                     , Data.Format.NetCDF.LowLevel.File
                     , Data.Format.NetCDF.LowLevel.Group
                     , Data.Format.NetCDF.LowLevel.String
                     , Data.Format.NetCDF.LowLevel.Variable
                     , Data.Format.NetCDF.LowLevel.VLen
                     , Data.Format.NetCDF.LowLevel.Util
                     , Data.Format.NetCDF.LowLevel.User.Type
  other-modules:       Data.Format.HDF.LowLevel.C.Definitions
                     , Data.Format.HDF.LowLevel.Definitions.Internal
                     , Data.Format.NetCDF.LowLevel.Definitions
                     , Data.Format.NetCDF.LowLevel.C.Definitions
                     , Data.Format.NetCDF.LowLevel.Variable.Internal
                     , Internal.Definitions
                     , Internal.Numerals.Ternary
                     , Foreign.C.Lib.FFI
  C-Sources:           cbits/HDF/wrapper.c
  other-extensions:    BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , FlexibleContexts
                     , ForeignFunctionInterface
                     , GADTs
                     , MultiParamTypeClasses
                     , PatternSynonyms
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances
                     , ViewPatterns
  ghc-options:        -Wall
  cc-options:         -Wall -Wextra -pedantic
  build-depends:       base >=4.11 && <4.22
                     , bytestring
                     , exceptions >= 0.10 && < 0.11
                     , mtl >= 2.2 && < 2.4
                     , template-haskell
                     , vector >= 0.12 && < 0.14
  build-tool-depends:  hsc2hs:hsc2hs
  pkgconfig-depends:   hdf >= 4.2.12 && < 4.3
                     , netcdf >= 4.6.0 && < 4.9.3
  hs-source-dirs:      src
  default-language:    Haskell2010
--  include-dirs:        /opt/packages/hdf/4.2.14/include
--  extra-lib-dirs:      /opt/packages/hdf/4.2.14/lib
--  extra-libraries:     df z dl m

test-suite test-main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Data.Format.HDF.LowLevel.SDSpec
                     , Data.Format.HDF.LowLevel.HESpec
                     , Data.Format.HDF.SDSpec
                     , Data.Format.NetCDF.LowLevel.AttributeSpec
                     , Data.Format.NetCDF.LowLevel.ChunkCacheSpec
                     , Data.Format.NetCDF.LowLevel.DimensionSpec
                     , Data.Format.NetCDF.LowLevel.ErrorSpec
                     , Data.Format.NetCDF.LowLevel.FileSpec
                     , Data.Format.NetCDF.LowLevel.GroupSpec
                     , Data.Format.NetCDF.LowLevel.StringSpec
                     , Data.Format.NetCDF.LowLevel.VariableSpec
                     , Data.Format.NetCDF.LowLevel.VLenSpec
                     , Data.Format.NetCDF.LowLevel.UserTypeSpec
                     , Data.Format.NetCDF.User.Types
                     , Testing.Common
                     , Spec
  other-extensions:    CPP
                     , DataKinds
                     , GADTs
                     , OverloadedStrings
                     , ScopedTypeVariables
  ghc-options:        -Wall -ddump-splices
  build-depends:       mohave
                     , base
                     , bytestring
                     , filepath >= 1.4 && < 1.6
                     , directory >= 1.3.1
                     , hspec >= 2.6
                     , vector >= 0.12 && < 0.14
  build-tool-depends:  hspec-discover:hspec-discover >= 2.6
  default-language:    Haskell2010